--- a/index.html
+++ b/index.html
@@ -342,17 +342,18 @@
 
     .autosave-indicator {
       position: fixed;
-      top: 20px;
-      right: 20px;
+      top: 10px;
+      right: 10px;
       background: rgba(136, 201, 153, 0.9);
       color: white;
-      padding: 8px 15px;
-      border-radius: 20px;
-      font-size: 14px;
+      padding: 6px 12px;
+      border-radius: 15px;
+      font-size: 12px;
       opacity: 0;
       transform: translateY(-20px);
       transition: all 0.3s ease;
       z-index: 100;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
     }
 
     .autosave-indicator.show {
